--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8080
+github.client.id=f88ba218935aa8831b3f
+github.client.secret=5ed309fbb2c4a304bb0df17e8073d0f64298e995
+github.redirect.uri=http://localhost:8080/callback
