add flyway migration support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8080
 github.client.id=f88ba218935aa8831b3f
 github.client.secret=5ed309fbb2c4a304bb0df17e8073d0f64298e995
 github.redirect.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
