--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,14 @@ server.port=8080
 github.client.id=f88ba218935aa8831b3f
 github.client.secret=672e187611bace3bc4ee7da657d4ce42e0bc82d4
 github.redirect.uri=http://localhost:8080/callback
-spring.datasource.url=jdbc:h2:~/community
-spring.datasource.username=sa
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/community
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.klay.model
+logging.file.path=logs/community.log
+logging.level.root=info
+logging.file.max-size=100MB
+logging.file.max-history=15
